Mt-694 Fix single wrapping arrow (#186)
Mt-694

--- a/src/scss/global/_links.scss
+++ b/src/scss/global/_links.scss
@@ -72,12 +72,14 @@ a {
     .heading {
       width: 100%;
       text-align: left;
+      padding-right: 2rem;
 
       &::after {
         content: url('data:image/svg+xml,%3Csvg%20width%3D%2220%22%20height%3D%2221%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cg%20clip-path%3D%22url%28%23clip0%29%22%3E%3Cpath%20d%3D%22M10%20.659L8.265%202.393%2015.13%209.27H.159v2.46h14.97l-6.864%206.877L10%2020.34l9.841-9.841L10%20.659z%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fg%3E%3Cdefs%3E%3CclipPath%20id%3D%22clip0%22%3E%3Cpath%20fill%3D%22%23fff%22%20transform%3D%22rotate%28-90%2010.25%2010.25%29%22%20d%3D%22M0%200h20v20H0z%22%2F%3E%3C%2FclipPath%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
         display: inline-block;
         height: 1.75rem;
         margin-left: var(--spacer-xx-small);
+        margin-right: -2rem;
       }
     }
     .text {
